# xposed-hook-so

./: build.gradle  gradle.properties  local.properties  project_structure.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  inlineHook.c  native-lib.cpp
app/src/main/cpp/include/: inlineHook.h
app/src/main/java/com/wizd/xposedinlinehook/: HookClass.java
gradle/wrapper/: gradle-wrapper.properties
